[gd_scene load_steps=5 format=3 uid="uid://c5r8su0ki15l8"]

[ext_resource type="Script" path="res://src/core/actor/sprite/actor_sprite.gd" id="1_yow33"]
[ext_resource type="Material" uid="uid://cw10xhc1nbh0" path="res://src/core/shaders/material_actor_sprite.tres" id="2_aphjf"]
[ext_resource type="Texture2D" uid="uid://cmfwm1033edy1" path="res://assets/graphics/actors/villain.png" id="2_m070q"]
[ext_resource type="Script" path="res://src/core/actor/sprite/actor_sprite_animation_player.gd" id="8_6tdw4"]

[node name="ActorSprite" type="Node2D"]
script = ExtResource("1_yow33")
metadata/_edit_lock_ = true

[node name="SpriteOrigin" type="Node2D" parent="."]
position = Vector2(8, -8)
metadata/_edit_lock_ = true

[node name="Sprite" type="Sprite2D" parent="SpriteOrigin"]
material = ExtResource("2_aphjf")
texture = ExtResource("2_m070q")
metadata/_edit_lock_ = true

[node name="SpriteTransform" type="RemoteTransform2D" parent="SpriteOrigin/Sprite"]

[node name="CameraTransform" type="RemoteTransform2D" parent="SpriteOrigin"]
metadata/_edit_lock_ = true

[node name="ActorSpriteAnimationPlayer" type="Node" parent="." node_paths=PackedStringArray("sprite", "sprite_transform", "camera_transform")]
script = ExtResource("8_6tdw4")
sprite = NodePath("../SpriteOrigin/Sprite")
sprite_transform = NodePath("../SpriteOrigin/Sprite/SpriteTransform")
camera_transform = NodePath("../SpriteOrigin/CameraTransform")

[connection signal="finished" from="ActorSpriteAnimationPlayer" to="." method="_on_actor_sprite_animation_player_finished"]
[connection signal="started" from="ActorSpriteAnimationPlayer" to="." method="_on_actor_sprite_animation_player_started"]
